--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -199,6 +199,9 @@
         background-color: $settings-select-bg;
         color: $settings-select-color;
     }
+    .settings--select {
+        width: 100%;
+    }
     .settings-input {
         /* !important to overwrite styles for Inputs on User Settings. By default inputs take styles from
     .block-list and it uses on many places. To keep everything OK and do not break something I just do
@@ -829,8 +832,11 @@
             .settings-select {
                 @extend .settings-select;
             }
-            > input.settings-input[type="text"] {
+            > input.settings-input[type="text"]#{$ant-fix} {
                 @extend .settings-input;
+            }
+            > input.settings--input[type="text"] {
+                max-width: 100%;
             }
         }
     }
@@ -1351,7 +1357,7 @@
         border-bottom-color: $secondary-text-color !important;
     }
     // Block List (section)
-    section.block-list input[type="text"],
+    section.block-list input[type="text"]#{$ant-fix},
     section.block-list input[type="password"] {
         border-bottom: 1px solid $panel-bg-color;
         background-color: transparent;
