--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -837,6 +837,7 @@
             }
             > input.settings--input[type="text"] {
                 max-width: 100%;
+                width: 100%;
             }
         }
     }
@@ -1682,7 +1683,9 @@
         border-bottom: 1px solid lighten($bg-color, 4%);
         border-top: 1px solid lighten($bg-color, 4%);
     }
-
+    div.ant-row.ant-form-item.no-offset {
+        margin-bottom: 0;
+    }
     // Settings
     .settings-menu {
         > ul {
@@ -1704,6 +1707,10 @@
                 }
             }
         }
+    }
+    .unstyled-list {
+        list-style: none;
+        margin-left: 0;
     }
     .settings--notifications {
         .settings--notifications--group {
