fix primary text color on the dark theme

--- a/app/assets/stylesheets/themes/_dark-theme.scss
+++ b/app/assets/stylesheets/themes/_dark-theme.scss
@@ -4,7 +4,7 @@
 
 $light-text-color: #fff;
 $dark-text-color: #444;
-$primary-text-color: #ffffff;
+$primary-text-color: #e0e0e0;
 $secondary-text-color: darken($primary-text-color, 20%);
 $inactive-text-color: darken($primary-text-color, 30%);
 $link-text-color: #1ec3fa;
