add as hovering
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -125,7 +125,9 @@
     .showcases-grid--wrapper--item--wrapper--content--description {
         line-height: 1.5rem;
     }
-
+    .exchange--chart-control {
+        background: $panel-bg-color;
+    }
     @media (max-width: 1150px) {
         .showcases-grid--wrapper {
             width: 900px;
