--- a/app/assets/stylesheets/themes/_dark-theme.scss
+++ b/app/assets/stylesheets/themes/_dark-theme.scss
@@ -32,9 +32,9 @@ $fee-color: $secondary-text-color;
 
 // Exchange colors
 $bid-color: #6ba583;
-$ask-color: #e3745b;
+$ask-color: #e6416e;
 $call-color: #bbbf2b;
-$positive-color: #258a14;
+$positive-color: #66cc7b;
 $negative-color: #ff3950;
 $row-accent-color: #3c3c3c;
 $header-color: #484848;
@@ -42,7 +42,7 @@ $header-color: #484848;
 // Account table view colors
 $account-header: #656565;
 $account-cells: #4b5158;
-$account-green: #7ed321;
+$account-green: #66cc7b;
 $account-primarytext: white;
 $account-dimmed: #afafaf;
 $account-border: #323131;
@@ -50,7 +50,7 @@ $account-background: #3f3f3f;
 $account-tabs-background: #2f2f2f;
 
 $pulsate-green-start: $account-green;
-$pulsate-green-end: #aaf25c;
+$pulsate-green-end: #66cc7b;
 $pulsate-red-start: $negative-color;
 $pulsate-red-end: #ef4040;
 
