--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -26,6 +26,7 @@
 @import "registration/account-registration";
 @import "registration/registration-selector";
 @import "login/login";
+@import "barter";
 
 .lifetime {
     background: url("../fresh-bolt2.png") no-repeat 100% 50%;
