[FEATURE] CB-1573 added important message

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -22,6 +22,7 @@
 @import "page404";
 @import "wallet";
 @import "incognito";
+@import "important";
 
 .lifetime {
     background: url("../fresh-bolt2.png") no-repeat 100% 50%;
