--- a/app/assets/stylesheets/themes/_dark-theme.scss
+++ b/app/assets/stylesheets/themes/_dark-theme.scss
@@ -61,6 +61,7 @@ $mobile-input-bg: #2d2d2d;
 $slider-thumb-color: #f00;
 
 $incognito-bg: #ff3950;
+$important-bg: #e68a00;
 
 .darkTheme {
     @include theme(
@@ -109,6 +110,7 @@ $incognito-bg: #ff3950;
         $main-content-margin-block-bg-color,
         $modal-bg-color,
         $mobile-input-bg,
-        $incognito-bg
+        $incognito-bg,
+        $important-bg
     );
 }
