--- a/app/assets/stylesheets/themes/_light-theme.scss
+++ b/app/assets/stylesheets/themes/_light-theme.scss
@@ -59,6 +59,7 @@ $modal-bg-color: #dadada;
 $mobile-input-bg: $input-background;
 
 $incognito-bg: #ea340b;
+$important-bg: #e68a00;
 
 .lightTheme {
     @include theme(
@@ -107,7 +108,8 @@ $incognito-bg: #ea340b;
         $main-content-margin-block-bg-color,
         $modal-bg-color,
         $mobile-input-bg,
-        $incognito-bg
+        $incognito-bg,
+        $important-bg
     );
 
     .change-up {
