--- a/app/assets/stylesheets/themes/_midnight-theme.scss
+++ b/app/assets/stylesheets/themes/_midnight-theme.scss
@@ -59,6 +59,7 @@ $modal-bg-color: #27384b;
 $mobile-input-bg: #1b1c22;
 
 $incognito-bg: #e3745b;
+$important-bg: #e68a00;
 
 .midnightTheme {
     @include theme(
@@ -107,6 +108,7 @@ $incognito-bg: #e3745b;
         $main-content-margin-block-bg-color,
         $modal-bg-color,
         $mobile-input-bg,
-        $incognito-bg
+        $incognito-bg,
+        $important-bg
     );
 }
