--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -420,3 +420,14 @@ body {
         left: -25px;
     }
 }
+
+.input-addon-before {
+    position: absolute;
+    height: 100%;
+    border: 1px solid #adadad;
+    padding: 0 15px;
+    border-radius: 6px;
+    left: 0;
+    display: flex !important;
+    align-items: center;
+}
