--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -22,7 +22,7 @@
 @import "page404";
 @import "wallet";
 @import "incognito";
-@import "important";
+@import "messages";
 
 .lifetime {
     background: url("../fresh-bolt2.png") no-repeat 100% 50%;
