--- a/app/assets/stylesheets/themes/_midnight-theme.scss
+++ b/app/assets/stylesheets/themes/_midnight-theme.scss
@@ -59,7 +59,8 @@ $modal-bg-color: #27384b;
 $mobile-input-bg: #1b1c22;
 
 $incognito-bg: #e3745b;
-$important-bg: #e68a00;
+$message-important-bg: #e68a00;
+$message-notice-bg: #afafaf;
 
 .midnightTheme {
     @include theme(
@@ -109,6 +110,7 @@ $important-bg: #e68a00;
         $modal-bg-color,
         $mobile-input-bg,
         $incognito-bg,
-        $important-bg
+        $message-important-bg,
+        $message-notice-bg
     );
 }
