--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -27,6 +27,7 @@
 @import "registration/registration-selector";
 @import "login/login";
 @import "barter";
+@import "direct-debit";
 
 .lifetime {
     background: url("../fresh-bolt2.png") no-repeat 100% 50%;
