#2497 Add balance and latest bid/ask

--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -189,6 +189,10 @@ form.order-form {
         margin-bottom: 0;
     }
 
+    .ant-input {
+        text-align: right;
+    }
+
     .ant-form-item-label {
         text-align: left;
         font-family: Roboto Medium, Monospaced Number, Chinese Quote,
