[FIX] CB-1609 fixed empty kyc modal

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -240,5 +240,5 @@ ul.dropdown.header-menu {
 }
 
 .benchmarkItem {
-    display: none !important; //TODO activate benchmark
+    display: block;
 }
