#2497 Add Expiration to Scaled Order

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -2175,6 +2175,12 @@
         }
     }
     .expiration-datetime-picker {
+        &.scaled-orders {
+            > div {
+                margin-top: -5px;
+            }
+        }
+
         > div {
             float: left;
             min-width: 145px;
