Multiple order cancelation on Exchange

--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -122,7 +122,7 @@ div#CenterContent {
     > thead > tr > th {
         font-size: 14px;
         padding: 5px 5px;
-        text-align: right !important;
+        text-align: right;
     }
 
     > tbody > tr > td {
