- Add label to right side of icon - Modify local-en to reflect export functionality

--- a/app/assets/stylesheets/components/_account.scss
+++ b/app/assets/stylesheets/components/_account.scss
@@ -499,3 +499,13 @@ div.tabs-container {
 
 .account-input-style-guide {
 }
+
+.recent-transactions {
+    .iconLinkAndLabel {
+        span {
+            font-weight: bold;
+            margin-left: 0.5rem;
+            text-transform: uppercase;
+        }
+    }
+}
