--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -610,6 +610,12 @@ input[type="number"]::-webkit-outer-spin-button {
     overflow: hidden;
 }
 
+.exchange-content-header.bid,
+.exchange-content-header.ask {
+    padding: 10px;
+}
+
+
 .exchange-padded {
     padding-right: 5px !important;
 }
