--- a/app/components/Utility/paginated-list.scss
+++ b/app/components/Utility/paginated-list.scss
@@ -2,4 +2,12 @@
     .ant-table-placeholder {
         min-height: 130px;
     }
+    .ant-table-body {
+        overflow: auto;
+        width: 100%;
+        height: 100%;
+    }
+    .ant-table td {
+        white-space: nowrap;
+    }
 }
