[FEATURE] CB-1666 make support tool permanent in the header

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -175,7 +175,8 @@ ul.dropdown.header-menu {
         }
         > div:first-of-type {
             padding-top: 5px;
-            > span.icon > svg {
+            > span.icon > svg,
+            img {
                 height: 1.5rem;
                 width: 1.5rem;
             }
