Added CollapsibleTable component.

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -28,6 +28,7 @@
 @import "login/login";
 @import "barter";
 @import "direct-debit";
+@import "collapsible_table";
 
 .lifetime {
     background: url("../fresh-bolt2.png") no-repeat 100% 50%;
