#2678 Fix settings margins and form display type

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -1711,6 +1711,7 @@
     .unstyled-list {
         list-style: none;
         margin-left: 0;
+        margin-bottom: 0;
     }
     .settings--notifications {
         .settings--notifications--group {
