#2356. use a new datePicker

--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -209,6 +209,12 @@ form.order-form {
         text-align: left;
         width: 60% !important;
     }
+
+    .expiration-datetime-picker--hidden {
+        display: flex;
+        visibility: hidden;
+        height: 0;
+    }
 }
 
 .exchange--buy-sell-form {
