Completely replaced old table with the Ant one on Account Open Orders.

--- a/app/assets/stylesheets/components/_account.scss
+++ b/app/assets/stylesheets/components/_account.scss
@@ -390,6 +390,16 @@ table.table.dashboard-table {
     }
 }
 
+.ant-table-content .ant-table-footer .total-value {
+    text-align: right;
+
+    .text {
+        margin-right: 20px;
+        text-transform: uppercase;
+        @include RobotoMedium;
+    }
+}
+
 div.header-selector > div.new-worker-button {
     padding-left: 0;
     padding-top: 10px;
