--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -192,7 +192,6 @@
     #incognito {
         background: $incognito-bg;
     }
-
     .settings-select {
         height: 36px;
         padding: 0 12px;
@@ -332,7 +331,6 @@
     .txtlabel.warning {
         color: $warning-color;
     }
-
     .txtlabel.cancel,
     .label.alert {
         color: $alert-color;
@@ -414,7 +412,6 @@
             background-color: $button-bg-color;
         }
     }
-
     .modal#marketPicker,
     .modal#settingsModal {
         background-color: $bg-color;
@@ -473,6 +470,7 @@
             border-bottom: 1px solid lighten($bg-color, 4%);
         }
     }
+
     .panel-left {
         @include color($light-text-color, $light-panel-bg-color);
         .block-list li > a {
@@ -1423,11 +1421,9 @@
     .exchange-content-header {
         color: $light-text-color;
     }
-
     .exchange-content-header--buy-sell-form {
         border-bottom: 0 !important;
     }
-
     // .block-content-header {
     // //text-transform: uppercase;
     // @include RobotoLight;
@@ -1676,7 +1672,6 @@
         border-bottom: 1px solid lighten($bg-color, 4%);
         border-top: 1px solid lighten($bg-color, 4%);
     }
-
     // Settings
     .settings-menu {
         > ul {
@@ -1741,6 +1736,7 @@
             @include RobotoMedium;
         }
     }
+
     .nodes-header {
         border-bottom-color: $button-bg-color;
         background-color: $bg-color;
@@ -1937,6 +1933,11 @@
                     }
                 }
             }
+        }
+    }
+    .ant-table-content .ant-table-footer .total-value {
+        .value {
+            color: $account-green;
         }
     }
     div.account-creation {
@@ -2180,7 +2181,6 @@
                 margin-top: -5px;
             }
         }
-
         > div {
             float: left;
             min-width: 145px;
@@ -2374,7 +2374,6 @@
             border-color: $button-bg-color;
             background-color: transparentize($button-bg-color, 0.9);
         }
-
         span.checkbox-active {
             border-color: $button-bg-color;
             background-color: $button-bg-color;
