Fix for merge commit (issue with prettifier).

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -297,7 +297,7 @@
     }
     // select:hover {
     // background-color: $panel-bg-color;
-    }
+    // }
 
     .label.success {
         color: $success-color;
@@ -1541,7 +1541,7 @@
     // .order-table {
     // > tbody > tr:nth-of-type(even) {
     // background-color: $row-accent-color;
-    }
+    // }
 
     // }
     .mymarkets-header {
