-Added carousel -Centered info Icon and text position

--- a/app/assets/stylesheets/layout/_page_layout.scss
+++ b/app/assets/stylesheets/layout/_page_layout.scss
@@ -123,3 +123,11 @@ div.bordered-header {
     height: 16px;
     display: inline-block;
 }
+
+.git-info {
+    text-align: center;
+    .ant-alert-icon {
+        position: static !important;
+        margin-right: 10px;
+    }
+}
