fix ant table placeholder height
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -1973,6 +1973,9 @@
             color: $account-green;
         }
     }
+    .ant-table-placeholder {
+        min-height: 130px;
+    }
     div.account-creation {
         border: 1px solid $account-cells;
         border-radius: 6px;
