--- a/app/assets/stylesheets/themes/_light-theme.scss
+++ b/app/assets/stylesheets/themes/_light-theme.scss
@@ -40,7 +40,7 @@ $row-accent-color: #ffffff;
 $header-color: #dcdcdc;
 
 // Account table view colors
-$account-header: #b1b1b1;
+$account-header: #eaeaea;
 $account-cells: #dadada;
 $account-green: #488a00;
 $account-primarytext: $primary-text-color;
