- added Filter for workers - changed Proposed / Active / Expired to Radio button - All votes tables transitioned to Ant tables - refactored -performed styling

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -29,6 +29,7 @@
 @import "barter";
 @import "direct-debit";
 @import "collapsible_table";
+@import "voting";
 
 .lifetime {
     background: url("../fresh-bolt2.png") no-repeat 100% 50%;
