[FEATURE] CB-1698 competition rewards

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -23,6 +23,7 @@
 @import "wallet";
 @import "incognito";
 @import "messages";
+@import "cb/competition";
 
 .lifetime {
     background: url("../fresh-bolt2.png") no-repeat 100% 50%;
