#2657. add json modal for all blockchain operations

--- a/app/assets/stylesheets/layout/_page_layout.scss
+++ b/app/assets/stylesheets/layout/_page_layout.scss
@@ -143,3 +143,8 @@ div.bordered-header {
         color: black !important;
     }
 }
+
+.json-link {
+    cursor: pointer;
+    text-transform: uppercase;
+}
