fix some details in voting page  - row for unsupported  - sorting of worker types
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/stylesheets/components/_voting.scss
+++ b/app/assets/stylesheets/components/_voting.scss
@@ -12,4 +12,27 @@
     .ant-row {
         padding-bottom: 20px;
     }
+    .unsupported {
+        > td {
+            color: grey;
+            > a {
+                color: grey;
+            }
+            > span {
+                > a {
+                    color: grey;
+                }
+            }
+            > span {
+                > div {
+                    > a {
+                        color: grey;
+                    }
+                }
+            }
+            svg > path {
+                fill: grey;
+            }
+        }
+    }
 }
